--- a/API/src/MainWidget.ui
+++ b/API/src/MainWidget.ui
@@ -1,10 +1,8 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>MainWidgetClass</class>
- <widget class="QWidget" name="MainWidgetClass" >
-  <property name="objectName" >
-   <string notr="true">MainWidgetClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="MainWidgetClass">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -12,14 +10,26 @@
     <height>400</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>MainWidget</string>
-  </property>$centralwidget$
+  </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>180</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="MainWidget.qrc"/>
+  <include location="MainWidget.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
