--- a/API/resources/resource.qrc
+++ b/API/resources/resource.qrc
@@ -7,4 +7,7 @@
         <file>water2.png</file>
         <file>water3.png</file>
     </qresource>
+    <qresource prefix="/maps">
+        <file>testMap.map</file>
+    </qresource>
 </RCC>
